updated to 1.17-rc1